k8s/21-svc-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  namespace: credit-scoring
spec:
  selector:
    app: backend
  ports:
    - name: http
      port: 80
      targetPort: 8000
  type: ClusterIP
