k8s/31-svc-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  namespace: credit-scoring
spec:
  selector:
    app: frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: ClusterIP
